# min-agent-demo

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  方案审核意见.md  最小 Agent Demo 技术方案规划.md
docs/: runbook.md
docs/superpowers/plans/: 2026-06-17-min-agent-demo-v0.1-implementation-plan.md  2026-06-17-min-agent-demo-v1-implementation-plan.md  2026-06-17-实施计划审核意见.md  2026-06-18-min-agent-demo-v0.2-deepseek-plan.md  2026-06-18-min-agent-demo-v2-deepseek-plan.md  2026-06-18-v0.2-实施计划审核意见.md  2026-06-18-v2-实施计划审核意见.md  2026-06-22-min-agent-demo-v0.3-multi-file-context-plan.md  2026-06-22-min-agent-demo-v3-multi-file-context-plan.md  2026-06-23-min-agent-demo-v0.4-trace-viewer-explainability-plan.md  2026-06-23-min-agent-demo-v0.5-controlled-write-permission-plan.md  (+1 more)
examples/workspace/: architecture.md  notes.md  project.md  usage.md
runs/: .gitkeep
src/min_agent/: __init__.py  agent_loop.py  cli.py  context_builder.py  context_loader.py  decision_model.py  deepseek_client.py  deepseek_llm.py  fake_llm.py  tool_registry.py  trace_recorder.py  trace_server.py  types.py
tests/: test_agent_loop.py  test_cli.py  test_cli_scenarios.py  test_context_builder.py  test_context_loader.py  test_decision_model.py  test_deepseek_client.py  test_deepseek_llm.py  test_fake_llm.py  test_permission_flow.py  test_project_structure.py  test_project_testing_rules.py  test_tool_registry.py  test_trace_recorder.py  test_trace_server.py  test_trace_viewer_source.py  test_types.py  test_workspace_tools.py
web/: trace_viewer.css  trace_viewer.html  trace_viewer.js
(+5 files in other folders)
